* Curve: missing overflow for polls (forum.css) [Bug 3055]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8417 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/forum.css
+++ b/Themes/curve/css/forum.css
@@ -238,6 +238,10 @@ table.table_list a.collapse
 }
 
 /* Poll question */
+#poll
+{
+overflow: hidden;
+}
 h4#pollquestion
 {
 	padding: 0.5em 0 0.5em 2em;
@@ -286,6 +290,7 @@ div#pollmoderation
 {
 	margin: 0 0 0 1em;
 	padding: 0;
+	overflow: auto;
 }
 
 /* onto the posts */
